# tinytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
srcs/tinytorch/: __init__.py  olympics.py
srcs/tinytorch/core/: activations.py  attention.py  autograd.py  dataloader.py  embeddings.py  layers.py  losses.py  optimizers.py  spatial.py  tensor.py  tokenization.py  training.py  transformers.py
srcs/tinytorch/perf/: acceleration.py  benchmarking.py  compression.py  memoization.py  profiling.py  quantization.py
tests/activations/: test_progressive_integration.py
tests/attention/: test_attention_core.py  test_simple.py
tests/layers/: test_progressive_integration.py
tests/losses/: run_all_tests.py  test_progressive_integration.py  test_utils.py
tests/tensor/: run_all_tests.py  test_progressive_integration.py  test_tensor_core.py  test_tensor_integration.py
tests/transformers/: test_training_simple.py
